# air_quality_analyzer

./: .gitignore  README.md  data_analysis.py  main.py  package-lock.json  package.json  pyproject.toml  tools.py
src/: App.jsx
src/components/: AnalysisResult.jsx
